# LibreTranslate

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists-CTranslate2.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.preloaded  ISSUE_TEMPLATE.md  README.md  SECURITY.md  TRADEMARK.md  babel.cfg  compile_locales.py  compile_translations.py  docker-compose.big.yml  docker-compose.cuda.yml  docker-compose.yml  install_models.py  k8s.yaml  lt.sh  main.py  manage.py  pyproject.toml  requirements.txt  run.bat  run.sh  setup.cfg  setup.py  update_locales.py  update_translations.py  wsgi.py
.docker/: Dockerfile
.github/: FUNDING.yml  dependabot.yaml  issue-template.md
.github/workflows/: issue-triage.yml  publish-docker-github.yml  publish-docker.yml  publish-dockerhub.yml  publish-package.yml  release-kubernetes.yml  run-tests.yml
.well-known/: funding-manifest-urls
app/: __init__.py  api_keys.py  app.py  default_values.py  flood.py  init.py  language.py  main.py  manage.py  no_limiter.py  remove_translated_files.py  security.py  suggestions.py
app/static/css/: dark-theme.css  main.css  main.min.css  material-icons.css
app/static/js/: app.js  prism.min.js
app/templates/: index.html  javascript-licenses.html
chart/: Chart.yaml  README.md  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  statefulset.yaml
deploy/: deployment.yml  hpa.yml  service.yml
docker/: Dockerfile  Dockerfile.cuda  arm.Dockerfile  cuda.Dockerfile  root-with-sshd.Dockerfile  user-with-api-key.Dockerfile
docs/: CONTRIBUTING.es.md  README.es.md  TRADEMARK.es.md  preloaded-offline-image.md
libretranslate/: __init__.py  api_keys.py  app.py  cache.py  default_values.py  detect.py  flood.py  init.py  language.py  locales.py  main.py  manage.py  no_limiter.py  ollama.py  remove_translated_files.py  scheduler.py  secret.py  security.py  storage.py  suggestions.py  tm_db.py
libretranslate/locales/: .gitignore  messages.pot
libretranslate/locales/ar/: meta.json
libretranslate/locales/ar/LC_MESSAGES/: messages.po
libretranslate/locales/az/: meta.json
libretranslate/locales/az/LC_MESSAGES/: messages.po
libretranslate/locales/be/: meta.json
libretranslate/locales/be/LC_MESSAGES/: messages.po
libretranslate/locales/bg/: meta.json
libretranslate/locales/bg/LC_MESSAGES/: messages.po
libretranslate/locales/bn/: meta.json
libretranslate/locales/bn/LC_MESSAGES/: messages.po
libretranslate/locales/ca/: meta.json
libretranslate/locales/ca/LC_MESSAGES/: messages.po
libretranslate/locales/ckb/LC_MESSAGES/: messages.po
libretranslate/locales/cs/: meta.json
libretranslate/locales/cs/LC_MESSAGES/: messages.po
libretranslate/locales/cv/LC_MESSAGES/: messages.po
libretranslate/locales/da/: meta.json
libretranslate/locales/da/LC_MESSAGES/: messages.po
libretranslate/locales/de/: meta.json
libretranslate/locales/de/LC_MESSAGES/: messages.po
libretranslate/locales/el/: meta.json
libretranslate/locales/el/LC_MESSAGES/: messages.po
libretranslate/locales/eo/: meta.json
libretranslate/locales/eo/LC_MESSAGES/: messages.po
libretranslate/locales/es/: meta.json
libretranslate/locales/et/: meta.json
libretranslate/locales/eu/: meta.json
libretranslate/locales/ext/: meta.json
libretranslate/locales/fa/: meta.json
libretranslate/locales/fi/: meta.json
libretranslate/locales/fil/: meta.json
libretranslate/locales/fr/: meta.json
libretranslate/locales/ga/: meta.json
libretranslate/locales/gd/: meta.json
libretranslate/locales/gl/: meta.json
libretranslate/locales/he/: meta.json
libretranslate/locales/hi/: meta.json
libretranslate/locales/hu/: meta.json
libretranslate/locales/id/: meta.json
libretranslate/locales/it/: meta.json
libretranslate/locales/ja/: meta.json
libretranslate/locales/kab/: meta.json
libretranslate/locales/kk/: meta.json
libretranslate/locales/ko/: meta.json
libretranslate/locales/lt/: meta.json
libretranslate/locales/lv/: meta.json
libretranslate/locales/mia/: meta.json
libretranslate/locales/ms/: meta.json
libretranslate/locales/nb/: meta.json
libretranslate/locales/nl/: meta.json
libretranslate/locales/nn/: meta.json
libretranslate/locales/oc/: meta.json
libretranslate/locales/pa/: meta.json
libretranslate/locales/pl/: meta.json
libretranslate/locales/pt/: meta.json
libretranslate/locales/pt_BR/: meta.json
libretranslate/locales/ro/: meta.json
libretranslate/locales/ru/: meta.json
libretranslate/locales/si/: meta.json
libretranslate/locales/sk/: meta.json
libretranslate/locales/sl/: meta.json
libretranslate/locales/sq/: meta.json
libretranslate/locales/sr/: meta.json
libretranslate/locales/sv/: meta.json
libretranslate/locales/th/: meta.json
libretranslate/locales/tl/: meta.json
libretranslate/locales/tr/: meta.json
libretranslate/locales/ug/: meta.json
libretranslate/locales/uk/: meta.json
libretranslate/locales/ur/: meta.json
libretranslate/locales/vi/: meta.json
libretranslate/locales/zgh/: meta.json
libretranslate/locales/zh/: meta.json
libretranslate/locales/zh_Hant/: meta.json
libretranslate/static/css/: dark-theme.css  main.css
libretranslate/static/js/: app.js
libretranslate/templates/: app.js.template  index.html  javascript-licenses.html
libretranslate/tests/: test_init.py  test_language.py  test_tm_db.py
libretranslate/tests/test_api/: conftest.py  test_api_detect_language.py  test_api_health.py  test_api_spec.py  test_api_tm_management.py  test_api_translate.py  test_api_translate_tm.py  test_language_variant_fallback.py
scripts/: compile_locales.py  docker_user_setup.py  entrypoint.sh  gunicorn_conf.py  healthcheck.py  install_models.py  print_args_env.py  run.sh  suggestions-to-jsonl.py  test_rare_words.py  update_locales.py
static/: index.html
templates/: index.html
tests/: test_api.py  test_init.py
tests/test_api/: conftest.py  test_api_frontend_settings.py  test_api_get_languages.py  test_api_translate.py
(+55 files in other folders)
