[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.11"
name = "libretranslate"
description = "Free and Open Source Machine Translation API. Self-hosted, no limits, no ties to proprietary services."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Piero Toffanin", email = "pt@uav4geo.com" },
    { name = "LibreTranslate Authors" },
]
maintainers = [
    { name = "Piero Toffanin", email = "pt@uav4geo.com" },
    { name = "LibreTranslate Authors" },
]
keywords = [
    "Python",
    "Translate",
    "Translation",
    "API",
]
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11"
    "Programming Language :: Python :: 3.12"
    "Programming Language :: Python :: 3.13"
]
dynamic = ["version"]

dependencies = [
    "argostranslate ==1.9.6",
    "Flask ==3.1.0",
    "flask-swagger ==0.2.14",
    "flask-swagger-ui ==4.11.1",
    "Flask-Limiter ==3.10.0",
    "Flask-Babel ==4.0.0",
    "Flask-Session ==0.8.0",
    "waitress ==3.0.2",
    "expiringdict ==1.2.2",
    "langdetect==1.0.9",
    "lexilang==1.0.2",
    "morfessor ==2.0.6",
    "appdirs ==1.4.4",
    "APScheduler ==3.11.0",
    "translatehtml ==1.5.2",
    "argos-translate-files ==1.2.0",
    "itsdangerous ==2.2.0",
    "Werkzeug ==3.1.3",
    "requests ==2.32.3",
    "redis ==5.2.1",
    "numpy >2",
    "prometheus-client ==0.21.1",
    "polib ==1.2.0",
    "packaging ==24.2",
    "torch ==2.5.1"
]

[project.scripts]
libretranslate = "libretranslate.main:main"
ltmanage = "libretranslate.manage:manage"


[project.optional-dependencies]
test = [
    "pytest >=8.3.4",
    "pytest-cov",
    "pre-commit >=4.0.1",
    "types-requests",
    "pip-audit"
]


[project.urls]
Homepage = "https://libretranslate.com"
Source = "https://github.com/LibreTranslate/LibreTranslate"
Documentation = "https://github.com/LibreTranslate/LibreTranslate"
Tracker = "https://github.com/LibreTranslate/LibreTranslate/issues"
History = "https://github.com/LibreTranslate/LibreTranslate/releases"

[tool.hatch.build]
artifacts = ["*.mo"]

# ENVIRONMENTS AND SCRIPTS
[tool.hatch.envs.default]
features = [
    "test",
]
post-install-commands = [
    "pre-commit install",
]


[tool.hatch.envs.default.scripts]
dev = "python main.py {args}"
locales = "python scripts/compile_locales.py"
fmt = [
    "pre-commit run --all --all-files",
]
test = [
    "fmt",
    "pytest {args}",
]
cov = [
    "pytest --cov-report html {args}",
    "python -c 'import webbrowser; webbrowser.open(\"http://0.0.0.0:3000\")'",
    "python -m http.server 3000 --directory ./htmlcov",
]


[[tool.hatch.envs.all.matrix]]
python = ["3.11", "3.12", "3.13"]


# TOOLS
[tool.hatch.version]
path = "VERSION"
pattern = "^(?P<version>[0-9]*.[0-9]*.[0-9]*)$"


[tool.pytest.ini_options]
addopts = [
    "-v",
    "--cov=libretranslate",
    "--color=yes",
    "--cov-report=term-missing",
]

ignore = [
    "E501", # line too long
    "A003", # Class attribute is shadowing a python builtin
    "S101", # Use of `assert` detected
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
    "T201", "T203", # remove print and pprint
    "E402", # Module level import not at top of file
]
